--- a/index.html
+++ b/index.html
@@ -19,29 +19,56 @@
               <a href="#">Why GitHub?</a>
             
               <div class="dropdown-content">
-                <a href="#">features</a>
-                <a href="#">features</a>
-                <a href="#">features</a>
-                <a href="#">features</a>
-                <a href="#">features</a>
-                <a href="#">features</a>
-                <a href="#">features</a>
-                <a href="#">features</a>
-                <a href="#">features</a>
+                <a href="#" class="bold">Features</a>
+                <a href="#">Code review</a>
+                <a href="#">Project Management</a>
+                <a href="#">Integrations</a>
+                <a href="#">Actions</a>
+                <a href="#">Packages</a>
+                <a href="#">Security</a>
+                <a href="#">Team management</a>
+                <a href="#">Hosting</a><hr>
+                <a href="#" class="bold">Customer stories</a>
+                <a href="#" class="bold">Security</a>
               </div> 
           </div>  
           </li> 
           <li>
             <a href="#">Enterprise</a>
           </li>   
-          <li>
+          <li><div class="dropdown">
+            <button class="dropbtn">
             <a href="#">Explore</a>
+              <div class="dropdown-content">
+                <a href="#" class="bold">Explore GitHub</a><hr>
+                <a href="#">Learn and contribute</a>
+                <a href="#">Topics</a>
+                <a href="#">Collections</a>
+                <a href="#">Trending</a>
+                <a href="#">Learning Lab</a>
+                <a href="#">Open source guides</a><hr>
+                <a href="#">Connect with others</a>
+                <a href="#">Events</a>
+                <a href="#">Community forum</a>
+                <a href="#">GitHub Education</a>
+              </div>
+            </div>
           </li>    
           <li>
             <a href="#">Marketplace</a>
           </li>
           <li>
-            <a href="#">Pricing</a>
+            <div class="dropdown">
+              <button class="dropbtn">
+                <a href="#">Pricing</a>
+                  <div class="dropdown-content">
+                    <a href="#" class="bold">Plans</a>
+                    <a href="#">Compare plans</a>
+                    <a href="#">Contact Sales</a><hr>
+                    <a href="#" class="bold">Nonprofit</a>
+                    <a href="#" class="bold">Education</a>
+                  </div>
+            </div>
           </li>
     </nav>
   </header>
