--- a/index.html
+++ b/index.html
@@ -76,6 +76,24 @@
                             </div>
                     </div>
                 </li>
+            </ul>
+            <ul class="secondary-nav-items">
+                <li>
+                    <input type='text' placeholder='Search GitHub' />
+                </li>
+                <li>
+                    <div class="dropdown">
+                        <button class="dropbtn">
+                            <a href="#">Sign in</a>
+                    </div>
+                </li>
+                <li>
+                    <div class="Sign-up">
+                        <button class="signup">
+                            <a href="#">Sign up</a>
+                    </div>
+                </li>
+            </ul>
         </nav>
     </header>
     <div class="container">
