--- a/index.html
+++ b/index.html
@@ -104,6 +104,21 @@
             <h3>GitHub is a development platform inspired by the way you work. From <a href='https://github.com/open-source'>open source</a> to <a href="https://github.com/enterprise">business</a>, you can host and review code, manage projects, and build software alongside 40 million developers.</h3>
         </div>
     </div>
+    
+    <form action="/action_page.php">
+        <div class="container">  
+                <label for="username">Username</label>
+                <input type="text">
+                <label for="email">Email</label>
+                <input type="email" name="email" required>
+                <label for="psw">Password</label>
+                <input type="password" name="psw" required>
+
+                <p>Make sure it's at least 15 characters OR at least 8 characters including a number and a lowercase letter. <a href="#">Learn more</a>.</p>
+                <button type="submit" class="registerbtn">Sign up for GitHub</button>
+                <p>By clicking "Sign up for GitHub", you agree to our <a href="#">Terms of Service</a> and <a href="#">Privacy Statement</a>. We'll occasionally send you account related emails.</p>
+        </div>
+  </form>
 </body>
 
 </html>
